switch to replica setup

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 DATABASE_URL="postgresql://user:pass@localhost:5432/db"
+DATABASE_USERNAME="user"
+DATABASE_PASSWORD="pass"
+DATABASE_HOSTNAME="localhost:5432"
+DATABASE_DATABASE="db"
 
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
