--- a/fly.toml
+++ b/fly.toml
@@ -17,6 +17,7 @@ kill_timeout = '5s'
   release_command = '/app/bin/migrate'
 
 [env]
+  PRIMARY_REGION = 'otp'
   PHX_HOST = 'tv.algora.io'
   PORT = '4000'
 
