--- a/fly.toml
+++ b/fly.toml
@@ -4,7 +4,7 @@
 #
 
 app = 'algora-media'
-primary_region = 'otp'
+primary_region = 'lax'
 kill_signal = 'SIGTERM'
 kill_timeout = '5s'
 
@@ -17,7 +17,7 @@ kill_timeout = '5s'
   release_command = '/app/bin/migrate'
 
 [env]
-  PRIMARY_REGION = 'otp'
+  PRIMARY_REGION = 'lax'
   PHX_HOST = 'tv.algora.io'
   PORT = '4000'
 
