serve embeddable videos on different origin with no cookies

--- a/fly.toml
+++ b/fly.toml
@@ -52,6 +52,30 @@ kill_timeout = '5s'
 
 [[services]]
   protocol = 'tcp'
+  internal_port = 4001
+  processes = ['app']
+
+[[services.ports]]
+    port = 81
+    handlers = ['http']
+    force_https = true
+
+[[services.ports]]
+    port = 444
+    handlers = ['tls', 'http']
+
+  [services.concurrency]
+    type = 'connections'
+    hard_limit = 2500
+    soft_limit = 2000
+
+[[services.tcp_checks]]
+    interval = '15s'
+    timeout = '2s'
+    grace_period = '20s'
+
+[[services]]
+  protocol = 'tcp'
   internal_port = 9006
   processes = ['app']
 
