--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,9 @@ AWS_ENDPOINT_URL_S3="https://fly.storage.tigris.dev"
 AWS_REGION="auto"
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
-BUCKET_NAME=""
+
+BUCKET_MEDIA=""
+BUCKET_ML=""
 
 REPLICATE_API_TOKEN=""
 HF_TOKEN=""
