add restream keys to config

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ AWS_SECRET_ACCESS_KEY=""
 BUCKET_MEDIA=""
 BUCKET_ML=""
 
+RESTREAM_CLIENT_ID=""
+RESTREAM_CLIENT_SECRET=""
+
 REPLICATE_API_TOKEN=""
 HF_TOKEN=""
 
