--- a/assets/package.json
+++ b/assets/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "@types/phoenix": "^1.6.4",
     "@types/phoenix_live_view": "^0.18.4"
+  },
+  "dependencies": {
+    "vidstack": "^1.12.9"
   }
 }
