update PWA name

--- a/priv/static/manifest.json
+++ b/priv/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Algora",
-  "name": "Algora",
+  "short_name": "Algora TV",
+  "name": "Algora TV",
   "icons": [
     {
       "src": "/images/logo-icon.png",
