update PWA manifest

--- a/priv/static/manifest.json
+++ b/priv/static/manifest.json
@@ -3,18 +3,18 @@
   "name": "Algora TV",
   "icons": [
     {
-      "src": "/images/logo-icon.png",
+      "src": "/images/logo-192px.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/images/logo-icon.png",
+      "src": "/images/logo-512px.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "fullscreen",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#5533bd",
+  "background_color": "#5533bd"
 }
