--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,12 @@ services:
       POSTGRES_PASSWORD: dev_password
       POSTGRES_DB: dev_db
     ports:
-      - "5432:5432"
+      - "15432:15432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    command: -p 15432
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U dev_user -d dev_db" ]
+      test: [ "CMD-SHELL", "pg_isready -U dev_user -d dev_db -p 15432" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -21,7 +22,7 @@ services:
       dockerfile: Dockerfile-dev
     environment:
       MIX_ENV: dev
-      DATABASE_URL: "postgres://dev_user:dev_password@db:5432/dev_db"
+      DATABASE_URL: "postgres://dev_user:dev_password@db:15432/dev_db"
       SEED_DB: "true"
       GITHUB_CLIENT_ID: ${GITHUB_CLIENT_ID}
       GITHUB_CLIENT_SECRET: ${GITHUB_CLIENT_SECRET}
