--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,13 @@ REPLICATE_API_TOKEN=""
 HF_TOKEN=""
 
 EVENT_SINK_URL=""
+
+RESUME_RTMP=false
+RESUME_RTMP_ON_UNPUBLUSH=false
+RESUME_RTMP_TIMEOUT=3200
+RESUME_RTMP_RECONNECT_TIMEOUT=12
+
+#TRANSCODE=4320p60@32000000|2160p60@16000000|1440p60@8000000|1440p30@4000000|720p30@2000000|360p30@1000000|180p30@500000
+SUPPORTS_H265=false
+FLAME_BACKEND=local
+#FLAME_MIX_TARGET=nvidia
