update setup instructions

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://user:pass@localhost:5432/db"
+DATABASE_URL="postgresql://algora:password@localhost:5432/tv"
 
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
